--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.8",
         "phpunit/phpunit": "^10"
+    },
+    "require": {
+        "psr/container": "^2.0"
     }
 }
